# ditherme

./: .gitignore  CMakeLists.txt  readme.md
src/: main.c
src/shaders/: dither.slang
